Fixed: images alignment
Used bootstrap container row col-sm-4 to align all three RPS images responsively

--- a/style.css
+++ b/style.css
@@ -33,9 +33,11 @@
    margin: 10px;
 
 }
-.flex-box-3 img{
-    
-   margin: 10px;
+.container{
+   text-align: center;
+}
+.rpsChoices img:hover{
+   box-shadow: 0px 10px 50px rgba(37, 50, 233,1);
 
 }
 .flex-box-3 img:hover{
